--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jazmin Mira</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <title>Jazmín Mira</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <h1>Librería Jazmín</h1>
+    <h2>Un mundo de libros para los más pequeños</h2>
+    <button id="agregar">Agregar un nuevo libro</button>
+    <button id="filtrar">Buscar libro por nombre</button>
     <script src="main.js"></script>
 </body>
 </html>
